--- a/login.css
+++ b/login.css
@@ -40,8 +40,9 @@ body{
     min-height: 70vh;
     height: auto;
     padding: 25px 50px 50px 50px;
-    margin: 10px 10px;
-    margin-top: 2vh;
+    margin-left: 10px 
+    margin-right: 10px;
+    margin-top: 5vh;
     background: linear-gradient(151.38deg, #46849B 11.12%, rgba(70, 132, 155, 0.123) 82.35%);
     border-radius: 8px;
 }
