--- a/login.css
+++ b/login.css
@@ -40,7 +40,7 @@ body{
     min-height: 70vh;
     height: auto;
     padding: 25px 50px 50px 50px;
-    margin: 10px 10px
+    margin: 10px 10px;
     background: linear-gradient(151.38deg, #46849B 11.12%, rgba(70, 132, 155, 0.123) 82.35%);
     border-radius: 8px;
 }
@@ -124,6 +124,7 @@ h3{
         margin: 10px;
         min-height: 50vh;
         height: auto;
+        margin-top: 8vh;
     }
 
     h1{
